external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_complex_expression.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression.move:3:29
  │
3 │         (if (true) 5 else 0)();
  │                             ^
  │                             │
  │                             Unexpected '('
  │                             Expected ';'

